# LandoTerm

./: pyproject.toml
landoterm/: main.py
