[tool.poetry]
name = "landoterm"
version = "0.1.0"
description = ""
authors = ["Landon LeBlanc <landonleblanc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pyserial = "^3.5"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
